# tai2

./: .gitignore  ChangeLog.md  GUARDRAILS.md  Instructions.md  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: postgres.py
app/models/: trade.py
app/services/: llm_service.py  market_service.py  okx_sdk_adapter.py  openrouter_service.py  prompt_builder.py  prompt_runner.py  prompt_scheduler.py  prompt_utils.py  state_service.py
app/ui/: __init__.py  components.py  pages.py
redis/: redis.conf
tests/: test_app.py  test_db.py  test_okx.py  test_okx_adapter.py  test_prompt_runner.py
